[package]
name = "autonity-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
web3 = "0.16"
rustc-hex = "2.1"
secp256k1 = "0.20"
dialoguer = "0.8"